--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <meta name="description" content="Quilmore propiedades, acompañamos a nuestros clientes en cada paso para brindar la mejor experiencia. "/>
+    <meta name="keywords" content="Quilmore Propiedades, inmobiliaria, quilmore propiedades,Loteos zona sur, Loteos Monteverde, Barrio Almafuerte,Barrio Republica, Glew, Guernica,Korn, bienes raices, Loteos zona Glew, Terrenos en venta, Loteos en venta, Quilmore, Miguel Quilmore, Inmobiliarias zona sur, Mejores inmobiliarias de zona sur,Propiedades, comprar casas, comprar terrenos "/>  
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,wght@0,100;1,200;1,600&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -36,9 +38,9 @@
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" >
                     Loteos</a>
                   <div class="dropdown-menu Desplegable" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#Loteos">Loteo Monte Verde</a>
-                    <a class="dropdown-item" href="#Loteos">Loteo R</a>
-                    <a class="dropdown-item" href="#Loteos">Lotes Manfredi</a>
+                    <a class="dropdown-item" href="#Loteos">Altos de Monteverde</a>
+                    <a class="dropdown-item" href="#Loteos">Barrio Republica</a>
+                    <a class="dropdown-item" href="#Loteos">Almafuerte Nuevo Barrio</a>
                   </div>
                 </li>
                 <li class="nav-item">
@@ -105,9 +107,8 @@
             quilmorepropiedades@gmail.com
           </h3>
         </div>
-        <div class="col-lg-9 col-md-12 col-sm-12">
-          <iframe
-          data-aos="fade-left" data-aos-duration="1500" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3275.35049374663!2d-58.39286408422752!3d-34.8222791766031!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd4a110c2709d%3A0xd2d3ad3f3abbad75!2sQuilmore%20propiedades!5e0!3m2!1sen!2sar!4v1612139289233!5m2!1sen!2sar" width="850" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <div class="col-lg-9 col-md-12 col-sm-11">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3275.35049374663!2d-58.39286408422752!3d-34.8222791766031!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd4a110c2709d%3A0xd2d3ad3f3abbad75!2sQuilmore%20propiedades!5e0!3m2!1sen!2sar!4v1612139289233!5m2!1sen!2sar" width="850" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
        </div>
       <div data-aos="fade-up" data-aos-duration="1500" class="card col-9 m-auto formulario" >
         <div class="card-body">
@@ -121,8 +122,8 @@
                   <input type="email" class="form-control" id="email" name="email">
                 </div>
                 <div class="form-group">
-                    <label for="msg">Para mas información ingrese su mensaje aqui</label>
-                    <textarea type="email" placeholder="Coloque su mensaje aquí" class="form-control" id="msg" name="msg"></textarea>
+                    <label for="msg">Para mas información</label>
+                    <textarea type="email" placeholder="ingrese su mensaje aquí" class="form-control" id="msg" name="msg"></textarea>
                   </div>
                 <input type="submit" class="btn btn-primary boton" name="enviar" value="Enviar">
               </form>
@@ -180,9 +181,9 @@
         </div>     
       </div> -->
                                       <!-- Nuestros trabajos -->
-
-   
-    
+    <footer>
+      
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
