--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" >
                     Loteos</a>
                   <div class="dropdown-menu Desplegable" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#Loteos">Altos de Monteverde</a>
-                    <a class="dropdown-item" href="#Loteos">Barrio Republica</a>
-                    <a class="dropdown-item" href="#Loteos">Almafuerte Nuevo Barrio</a>
+                    <a class="dropdown-item" href="/pages/Loteos.html">Altos de Monteverde</a>
+                    <a class="dropdown-item" href="/pages/Loteos.html">Barrio Republica</a>
+                    <a class="dropdown-item" href="/pages/Loteos.html">Almafuerte Nuevo Barrio</a>
                   </div>
                 </li>
                 <li class="nav-item">
@@ -48,6 +48,12 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#AboutUS">Acerca de nosotros</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#AboutUS">Novedades</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#AboutUS">Preguntas frecuentes</a>
                 </li>
                 </ul>
               </div>
@@ -142,47 +148,91 @@
           <h3>Desde su creación en 2016, Quilmore Propiedades se ha ganado su reputación como uno de los principales Desarrolladores inmobiliarios de Burzaco y sus alrededores. Estamos  orgullosos de desarrollar  loteos con una marcada huella de sostenibilidad. Contar con un sólido equipo de profesionales del sector nos permite crear valor en nuestros proyectos y en saber traducir la visión de nuestros inversionistas y clientes en realidad. Para obtener más información sobre el perfil de nuestra empresa, póngase en contacto hoy mismo.</h3>
         </div>
       </div>
-      <div id="sitio">
+      <!-- <div id="sitio">
       <h1 class="Titulos">Estamos trabajando para poder traerte la mejor experiencia, proximamente la web completa estará disponible</h1>
     </div>  
-      <img class="img-fluid construccion" src="images/SITIO-EN-CONSTRUCCION.jpg" alt="">  <div class="container">
-      <input type="checkbox"id="btn-mas">
-      <div class="redes">
-        <a href="https://www.facebook.com/quilmorepropiedades"class="icon-facebook"></a>
-        <a href="https://wa.me/+541124923030?text=Hola%21+me+interesan+los+lotes+que+tienes+publicados%2C+quisiera+mas+información+por+favor"class="icon-whatsapp"></a>
-        <a href="mailto:quilmorepropiedades@gmail.com?subject=Información acerca de los loteos y/o propiedades&body=Hola! me interesan los lotes que tienes publicados, quisiera mas información por favor"
-        class="icon-mail"></a>
+      <img class="img-fluid construccion" src="images/SITIO-EN-CONSTRUCCION.jpg" alt="">   -->
+      <div class="container">
+        <input type="checkbox"id="btn-mas">
+          <div class="redes">
+            <a href="https://www.facebook.com/Quilmorepropiedades.ok"class="icon-facebook"></a>
+            <a href="https://wa.me/+541124923030?text=Hola%21+me+interesan+los+lotes+que+tienes+publicados%2C+quisiera+mas+información+por+favor"class="icon-whatsapp"></a>
+            <a href="mailto:quilmorepropiedades@gmail.com?subject=Información acerca de los loteos y/o propiedades&body=Hola! me interesan los lotes que tienes publicados, quisiera mas información por favor"
+            class="icon-mail"></a>
+          </div>
+          <div class="btn-mas">
+          <label for="btn-mas" class="icon-plus-outline"></label>
+          </div>
       </div>
-      <div class="btn-mas">
-        <label for="btn-mas" class="icon-plus-outline"></label>
-      </div>
-    </div>
   </div>
                                                   <!-- About us -->
-                                      <!-- Nuestros trabajos -->
-     <!-- <div id="trabajos"><h1 data-aos="fade-up" data-aos-duration="1500" class="Titulos">Nuestros trabajos</h1></div>
-      <div data-aos="fade-down" data-aos-duration="2000" id="trabajosCuerpo">
-        <div class="card bg-dark text-white">
-          <img src="" class="card-img" alt="...">
-          <div class="card-img-overlay">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text">Last updated 3 mins ago</p>
-          </div>
-        </div>
 
-        <div class="card bg-dark text-white">
-          <img src="..." class="card-img" alt="...">
-          <div class="card-img-overlay">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text">Last updated 3 mins ago</p>
-          </div>
-        </div>     
-      </div> -->
                                       <!-- Nuestros trabajos -->
     <footer>
-      
+      <div class="container-footer-all">
+        <div class="container-body">
+          <div class="column1">
+              <h1>Información de contacto</h1>
+                <div class="row2">
+                  <img src="/icons/home.png">
+                  <label>Carlos Pellegrini 1120, Burzaco, Provincia de Buenos Aires</label>
+                </div>
+                <div class="row2">
+                  <img src="icons/phone.png">
+                  <label>1124923030</label>
+                </div>
+                <div class="row2">
+                  <img src="icons/mail.png">
+                  <label>Quilmorepropiedades@gmail.com</label>
+                </div>
+          </div>
+          <div class="column2">
+              <h1>
+                  Redes sociales
+              </h1>
+              <div class="row">
+                <img src="/icons/facebook.png">
+                <label>Nuestro Facebook</label>
+              </div>
+              <div class="row">
+                 <a href="https://www.instagram.com/propiedadesquilmore/"><img src="/icons/instagram.png">
+               <label>Siguenos en Instagram</label></a>
+              </div>
+          </div>
+          <div class="column3">
+          <h1>Secciones</h1>
+          <ul> <!-- md para izquierda, ml para que esta a la derecha, mx para centrar -->
+            <li >
+              <a href="#inicio">Inicio</a>
+            </li>
+            <li >
+              <a href="#sitio">Nuestros trabajos</a>
+            </li>
+            <li>
+              <a href="/pages/Loteos.html">Loteos</a>
+            </li>
+            <li>
+              <a href="#Contacto">Contacto</a>
+            </li>
+            <li >
+              <a href="#AboutUS">Acerca de nosotros</a>
+            </li>
+            <li >
+              <a href="#AboutUS">Novedades</a>
+            </li>
+            <li >
+              <a href="#AboutUS">Preguntas frecuentes</a>
+            </li>
+            </ul>
+        </div>
+      </div>   
+    </div>
+
+      <div class="container-footer">
+          <div class="copyright">
+            ©2021 Quilmore Propiedades
+          </div>
+      </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
